# miniLogger

./: CMakeLists.txt  CONTRIBUTING.md  README.md  minilogger.h
minilogger/include/: minilogger.h
samples/cpp_basic/: CMakeLists.txt  main.cpp
